# origami

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  README.md  RELEASING.md  Untitled.ipynb  api_token  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: base-linting.yaml  ci.yaml  publish-docs.yaml  publish.yaml
changelog/: index.html
client/: index.html
contributing/: index.html
docs/: client.md  gen_doc_stubs.py  index.md  quickstart.md
docs/reference/clients/: api.md  cache.md  rtu.md
docs/reference/models/: kernels.md  notebook.md
docs/reference/models/api/: base.md  datasources.md  files.md  outputs.md  projects.md  spaces.md  users.md
docs/reference/models/deltas/: base.md  discriminators.md
docs/reference/models/deltas/delta_types/: cell_contents.md  cell_execute.md  cell_metadata.md  cell_output_collection.md  nb_cells.md  nb_metadata.md
docs/reference/models/rtu/: base.md  discriminators.md  errors.md
docs/reference/models/rtu/channels/: files.md  kernels.md  system.md
docs/reference/notebook/: builder.md
origami/: __init__.py  cli.py  client.py  format.py  log_utils.py  pathing.py
origami/clients/: api.py  rtu.py
origami/defs/: access_levels.py  deltas.py  files.py  jobs.py  kernels.py  models.py  rtu.py
origami/models/: api_resources.py  kernels.py  notebook.py
origami/models/api/: base.py  datasources.py  files.py  kernels.py  outputs.py  projects.py  spaces.py  users.py
origami/models/deltas/: base.py  discriminators.py
origami/models/deltas/delta_types/: cell_contents.py  cell_execute.py  cell_metadata.py  cell_output_collection.py  nb_cells.py  nb_metadata.py
origami/models/rtu/: base.py  discriminators.py  errors.py
origami/models/rtu/channels/: files.py  kernels.py  system.py
origami/notebook/: builder.py  model.py
origami/rtu_client/: client.py  manager.py
origami/tests/: __init__.py  client_test.py  conftest.py  test_client.py
origami/tests/defs/: test_kernels.py
origami/tests/notebook/: test_notebook_builder.py
origami/tests/types/: test_kernels.py
origami/types/: access_levels.py  deltas.py  files.py  jobs.py  kernels.py  models.py  rtu.py
quickstart/: index.html
reference/SUMMARY/: index.html
reference/cli/: index.html
reference/clients/api/: index.html
reference/clients/cache/: index.html
reference/clients/rtu/: index.html
reference/log_utils/: index.html
reference/models/api/base/: index.html
reference/models/api/datasources/: index.html
reference/models/api/files/: index.html
reference/models/api/outputs/: index.html
reference/models/api/projects/: index.html
reference/models/api/spaces/: index.html
reference/models/api/users/: index.html
reference/models/deltas/base/: index.html
reference/models/deltas/delta_types/cell_contents/: index.html
reference/models/deltas/delta_types/cell_execute/: index.html
reference/models/deltas/delta_types/cell_metadata/: index.html
reference/models/deltas/delta_types/cell_output_collection/: index.html
reference/models/deltas/delta_types/nb_cells/: index.html
reference/models/deltas/delta_types/nb_metadata/: index.html
reference/models/deltas/discriminators/: index.html
reference/models/kernels/: index.html
reference/models/notebook/: index.html
reference/models/rtu/base/: index.html
reference/models/rtu/channels/files/: index.html
reference/models/rtu/channels/kernels/: index.html
reference/models/rtu/channels/system/: index.html
reference/models/rtu/discriminators/: index.html
reference/models/rtu/errors/: index.html
reference/notebook/builder/: index.html
search/: search_index.json
tests/: conftest.py
tests/api/: test_projects.py  test_spaces.py  test_users.py
tests/e2e/: conftest.py
tests/e2e/api/: test_files.py  test_spaces.py  test_users.py
tests/e2e/rtu/: test_execution.py  test_notebook.py
tests/rtu/: test_execution.py  test_notebook.py
tests/unit/: test_sql_cells.py  test_version.py
tests/unit/models/: conftest.py  test_files.py  test_notebook.py  test_project.py  test_rtu_base.py  test_space.py  test_user.py
usage/: index.html
